docs/tests/typing/bad/testfile-call-2.cpp

class S { public: int a; };
void f(int x) {}
int main() { S s; f(s); }

